--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "react-scripts build && cp build/index.html build/404.html",
     "start": "react-scripts start",
+    "deploy": "react-scripts build && firebase deploy --only hosting",
     "test": "react-scripts test",
     "lint": "tslint -p tsconfig.json",
     "version": "cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]'"
